fixed styling so background color covers when additional rows of questions are added

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 
-html, body, #root, #root>div {
-    height: 100%
-  }
+// html, body, #root, #root>div {
+//     height: 100%
+//   }
 
-  #root {
+// main {
+//   height: 100vh
+// }
+
+  body {
     background-color: #DCE1E3;
 }
